hphp/hack/test/typecheck/reactive/mayberx6.php.exp
File "mayberx6.php", line 5, characters 38-53:
<<__OnlyRxIfRxFunc>> attribute can only be put on parameters of conditionally reactive function or method annotated with <<__OnlyRxIfArgs>> attribute. (NastCheck[3063])
